--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <p>Hello World, i am mxolisi phungula i wrote this code on VS Code IDE</p>
+    <p>I created this code in the the browser of my repository</p>
 </body>
 </html>
